Describe `module-info.test` support